--- a/gb/17/8/21/n9552214.md
+++ b/gb/17/8/21/n9552214.md
@@ -1,27 +1,27 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nmvalw282/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nmvalw282/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/nmvalw282/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nmvalw282/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/nmvalw282/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nmvalw282/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/nmvalw282/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nmvalw282/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/nmvalw282/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nmvalw282/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/nmvalw282/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nmvalw282/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/nmvalw282/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nmvalw282/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/nmvalw282/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nmvalw282/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/nmvalw282/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/nmvalw282/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/nmvalw282/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/nmvalw282/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/nmvalw282/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/nmvalw282/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/nmvalw282/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/nmvalw282/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/nmvalw282/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/nmvalw282/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/nmvalw282/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/nmvalw282/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/nmvalw282/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/nmvalw282/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/nmvalw282/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/nmvalw282/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/nmvalw282/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/nmvalw282/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/nmvalw282/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/nmvalw282/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/nmvalw282/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/nmvalw282/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/nmvalw282/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/nmvalw282/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/nmvalw282/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/nmvalw282/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/nmvalw282/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/nmvalw282/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/nmvalw282/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>美弗州冲突中的极右、极左组织是何来历</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2017/08/GettyImages-831165652-600x400.jpg" />
 <h6>8月13日，在弗州夏洛特镇的集会暴力冲突悲剧发生后，当地民众自发上街悼念死者以及抗议暴力。(Win McNamee/Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2017年08月22日讯】（大纪元记者林燕综合报导）8月12日，美国弗吉尼亚州夏洛特镇（Charlottesville）发生的集会暴力冲突事件引发了人们对“<ahref="https://github.com/nmvalw282/djy/blob/master/gb/tag/%E6%9E%81%E5%B7%A6.md#1">极左</a>、<ahref="https://github.com/nmvalw282/djy/blob/master/gb/tag/%E6%9E%81%E5%8F%B3.md#1">极右</a>”意识形态组织的警惕。从网络上的现场视频来看，大多出自“另类右翼（Alt-Right）”与“反法（Antifa）”两个组织。</p>
-<p style="text-align: left;">这两个组织究竟是什么？一个是顽固的白人<ahref="https://github.com/nmvalw282/djy/blob/master/gb/tag/%E6%B0%91%E6%97%8F%E4%B8%BB%E4%B9%89.md#1">民族主义</a>者，另一个是八十多年前由苏联共产党在德国成立的前线组织。</p>
-<h2>“另类右翼” 顽固的白人<ahref="https://github.com/nmvalw282/djy/blob/master/gb/tag/%E6%B0%91%E6%97%8F%E4%B8%BB%E4%B9%89.md#1">民族主义</a>者</h2>
-<p>“另类右翼” （英文通常简写为Alt-Right），由斯宾塞（Richard Spencer）在2008年提出。他自述该运动集中在“白人身份认同”和保守“传统西方文明”两方面。但反对者指其是<ahref="https://github.com/nmvalw282/djy/blob/master/gb/tag/%E7%A7%8D%E6%97%8F%E4%B8%BB%E4%B9%89.md#1">种族主义</a>、仇视女性和反犹太人。</p>
+	<p>【大纪元2017年08月22日讯】（大纪元记者林燕综合报导）8月12日，美国弗吉尼亚州夏洛特镇（Charlottesville）发生的集会暴力冲突事件引发了人们对“<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%9E%81%E5%B7%A6.md#1">极左</a>、<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%9E%81%E5%8F%B3.md#1">极右</a>”意识形态组织的警惕。从网络上的现场视频来看，大多出自“另类右翼（Alt-Right）”与“反法（Antifa）”两个组织。</p>
+<p style="text-align: left;">这两个组织究竟是什么？一个是顽固的白人<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B0%91%E6%97%8F%E4%B8%BB%E4%B9%89.md#1">民族主义</a>者，另一个是八十多年前由苏联共产党在德国成立的前线组织。</p>
+<h2>“另类右翼” 顽固的白人<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B0%91%E6%97%8F%E4%B8%BB%E4%B9%89.md#1">民族主义</a>者</h2>
+<p>“另类右翼” （英文通常简写为Alt-Right），由斯宾塞（Richard Spencer）在2008年提出。他自述该运动集中在“白人身份认同”和保守“传统西方文明”两方面。但反对者指其是<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%A7%8D%E6%97%8F%E4%B8%BB%E4%B9%89.md#1">种族主义</a>、仇视女性和反犹太人。</p>
 <p>美国国土安全部在2009年曾对右派极端主义做出解释，指其是将目标放在激进、种族或宗教少数分子的仇恨团体，其可能致力于某项单一议题，如反对堕胎、同性恋和移民。</p>
-<p>作为一个较新的<ahref="https://github.com/nmvalw282/djy/blob/master/gb/tag/%E6%9E%81%E5%8F%B3.md#1">极右</a>政治运动，“另类右翼”跟传统右翼组织（三K党和纳粹党）不同，他们的着装不那么怪异和突出，但其组织人之一斯宾塞自诩“另类右翼”运动是“白人的身份政治”，目标是创造一个白人的国家、摧毁“左派”，并将左派称为“死亡的意识形态”。批评者指他们是顽固的白人民族主义者。</p>
+<p>作为一个较新的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%9E%81%E5%8F%B3.md#1">极右</a>政治运动，“另类右翼”跟传统右翼组织（三K党和纳粹党）不同，他们的着装不那么怪异和突出，但其组织人之一斯宾塞自诩“另类右翼”运动是“白人的身份政治”，目标是创造一个白人的国家、摧毁“左派”，并将左派称为“死亡的意识形态”。批评者指他们是顽固的白人民族主义者。</p>
 <p>“另类右翼”其实也由多个小团体组成。根据布赖特巴特新闻网（Breitbart News）的报导，“另类右翼”的派别还可细分为“知识分子”、“天生保守派”和“迷因（Memo）派”等——多数是热衷于网络搜寻的年轻活动家。它没有正式的成员资格，所以也很难有凖确的成员数量估计。</p>
-<p>据悉，参与弗州集会暴力冲突的“另类右翼”包括“美国先锋（Vanguard America）”和”欧洲身份（Identity Europa）”两个组织。前者崇尚武力、鼓励成员公开携带枪支。这次开车撞人的肇事司机菲尔兹（James Alex Fields）至少从高中开始就怀有极端主义的思想，且扛着“美国先锋”的盾牌，很可能是该组织的成员；后者是2016年成立于加州，名字源于欧洲反移民的认同运动（Identitarian movement）。有人指在2016年伯克利抗议变骚乱事件中，他们与<ahref="https://github.com/nmvalw282/djy/blob/master/gb/tag/%E6%9E%81%E5%B7%A6.md#1">极左</a>翼“反法”行动（见后文）曾有交手。</p>
+<p>据悉，参与弗州集会暴力冲突的“另类右翼”包括“美国先锋（Vanguard America）”和”欧洲身份（Identity Europa）”两个组织。前者崇尚武力、鼓励成员公开携带枪支。这次开车撞人的肇事司机菲尔兹（James Alex Fields）至少从高中开始就怀有极端主义的思想，且扛着“美国先锋”的盾牌，很可能是该组织的成员；后者是2016年成立于加州，名字源于欧洲反移民的认同运动（Identitarian movement）。有人指在2016年伯克利抗议变骚乱事件中，他们与<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%9E%81%E5%B7%A6.md#1">极左</a>翼“反法”行动（见后文）曾有交手。</p>
 <p>从观点上看，“另类右翼”反对移民、反对女权主义、反对同性恋和跨性别者权利。其在网络上广泛存在，通过网络和社交媒体的即时通讯群传播和发展，比如通过Discord这类游戏玩家使用的在线即时通讯工具联系。</p>
 <p>因为“另类右翼”掺有白人民族主义和反犹太主义的意识形态，有些媒体也用“白人民族主义”和“极右”等词语来形容“另类右翼”。</p>
 <p>“另类右翼”憎恨政治正确，曾在2016年总统大选中表示支持川普，尤其是其对川普行纳粹礼，遭到媒体公开讥讽后。事后，川普在2016年11月遣责“另类右翼”运动，声称自己不对他们的观点负责；而斯宾塞也在2017年4月指川普跟他们不是同一条道上的。</p>
-<p>在弗州暴力冲突事件发生后，8月14日川普更是抨击“白人至上主义者”和“新纳粹”，表示：“<ahref="https://github.com/nmvalw282/djy/blob/master/gb/tag/%E7%A7%8D%E6%97%8F%E4%B8%BB%E4%B9%89.md#1">种族主义</a>是邪恶的，那些以它的名义制造暴力的人是罪犯和暴徒，包括三K党、新纳粹、白人至上主义者和其它不接受美国人所拥有的一切仇恨团体。”</p>
-<figure id="attachment_9540441" style="width: 450px" class="wp-caption aligncenter"><img class="size-medium wp-image-9540441" src="https://i.epochtimes.com/assets/uploads/2017/08/GettyImages-831058828-450x300.jpg" alt="8月12日，一名白人至上主义者在弗州夏洛特镇的“团结右翼”集会中驾驶汽车冲击抗议人群，造成32岁的希瑟．海尔（Heather Heyer）遇难，19人受伤。另有两名警员在执行任务时，不幸坠机殉职。(Chip Somodevilla/Getty Images)" width="450" b="300" /><figcaption class="wp-caption-text">8月12日，一名白人至上主义者在弗州夏洛特镇的“团结右翼”集会中驾驶汽车冲击抗议人群，造成32岁的希瑟．海尔（Heather Heyer）遇难，19人受伤。另有2名警员在执行任务时，不幸坠机殉职。(Chip Somodevilla/Getty Images)</figcaption></figure>
-<h2>“反法”是幌子 源头是<ahref="https://github.com/nmvalw282/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E4%B8%BB%E4%B9%89.md#1">共产主义</a>意识</h2>
+<p>在弗州暴力冲突事件发生后，8月14日川普更是抨击“白人至上主义者”和“新纳粹”，表示：“<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%A7%8D%E6%97%8F%E4%B8%BB%E4%B9%89.md#1">种族主义</a>是邪恶的，那些以它的名义制造暴力的人是罪犯和暴徒，包括三K党、新纳粹、白人至上主义者和其它不接受美国人所拥有的一切仇恨团体。”</p>
+<figure id="attachment_9540441" aria-describedby="caption-attachment-9540441" style="width: 450px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2017/08/GettyImages-831058828-450x300.jpg" target="_blank" rel="noreferrer noopener"> <img class="size-medium wp-image-9540441" src="https://i.epochtimes.com/assets/uploads/2017/08/GettyImages-831058828-450x300.jpg" alt="8月12日，一名白人至上主义者在弗州夏洛特镇的“团结右翼”集会中驾驶汽车冲击抗议人群，造成32岁的希瑟．海尔（Heather Heyer）遇难，19人受伤。另有两名警员在执行任务时，不幸坠机殉职。(Chip Somodevilla/Getty Images)" width="450" b="300" /></a><figcaption id="caption-attachment-9540441" class="wp-caption-text">8月12日，一名白人至上主义者在弗州夏洛特镇的“团结右翼”集会中驾驶汽车冲击抗议人群，造成32岁的希瑟．海尔（Heather Heyer）遇难，19人受伤。另有2名警员在执行任务时，不幸坠机殉职。(Chip Somodevilla/Getty Images)</figcaption></figure>
+<h2>“反法”是幌子 源头是<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E4%B8%BB%E4%B9%89.md#1">共产主义</a>意识</h2>
 <p>两天后，川普抨击“另类左翼（Alt-Left）”也应为暴力事件负责，指左翼团体在未经许可下到了集会现场，而且“非常、非常暴力”。</p>
-<p>跟“另类右翼”相对的“另类左翼”就是“反法（Antifa）”，它是“反法西斯运动”（Antifaschistische Aktion）的缩写，其来源是苏联<ahref="https://github.com/nmvalw282/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E4%B8%BB%E4%B9%89.md#1">共产主义</a>。这一组织于1932年在德国创建，属于德国共产党（KPD）的下属准军事组织。现在使用的标志（带镰刀图像的红旗）仍然跟八十年前在柏林共产党总部悬挂的“反法”标志一致（可参考<ahref="https://en.wikipedia.org/wiki/Communist_Party_of_Germany#/media/File:Bundesarchiv_B_145_Bild-P046279,_Berlin,_Liebknecht-Haus_am_B%C3%BClowplatz.jpg">维基百科</a>图片）。</p>
+<p>跟“另类右翼”相对的“另类左翼”就是“反法（Antifa）”，它是“反法西斯运动”（Antifaschistische Aktion）的缩写，其来源是苏联<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E4%B8%BB%E4%B9%89.md#1">共产主义</a>。这一组织于1932年在德国创建，属于德国共产党（KPD）的下属准军事组织。现在使用的标志（带镰刀图像的红旗）仍然跟八十年前在柏林共产党总部悬挂的“反法”标志一致（可参考<ahref="https://en.wikipedia.org/wiki/Communist_Party_of_Germany#/media/File:Bundesarchiv_B_145_Bild-P046279,_Berlin,_Liebknecht-Haus_am_B%C3%BClowplatz.jpg">维基百科</a>图片）。</p>
 <p>英文大纪元日前查证了这一组织的起源。根据促进反法西斯文化协会出版的德语小册子《80年反法西斯行动》，撰写人兰格（Bernd Langer）自述该组织最早可以追溯到1921年7月，苏联的第三共产国际在莫斯科的国际大会。</p>
 <p>该团体作为苏共在德国的前线组织成立，只信奉共产主义这一种意识形态，并把除共产主义以外的所有意识形态都标榜为“法西斯主义”。</p>
 <p>德国国内情报局宪法保护联邦办公室（BfV）在2016年发表报告，也证实这一点。报告指，从左翼极端主义观点来看，“反法”标榜的“法西斯”往往不是指实际的法西斯主义，而是指代“资本主义”。反法西斯具有双重含义，在暗喻“反资本主义制度”。</p>
@@ -111,36 +111,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/nmvalw282/djy/blob/master/gb/17/8/13/n9524761.md#1">美司法部对弗州致命车祸展开联邦民权调查</a></li>
-<li><a href="https://github.com/nmvalw282/djy/blob/master/gb/17/8/14/n9528779.md#1">川普抨击白人至上主义者 誓言法办弗州肇事者</a></li>
-<li><a href="https://github.com/nmvalw282/djy/blob/master/gb/17/8/14/n9528911.md#1">全美各地集会游行 悼念弗州遇难者</a></li>
-<li><a href="https://github.com/nmvalw282/djy/blob/master/gb/17/8/15/n9533113.md#1">弗州集会暴力冲突 川普：不应仅归责一方</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/8/13/n9524761.md#1">美司法部对弗州致命车祸展开联邦民权调查</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/8/14/n9528779.md#1">川普抨击白人至上主义者 誓言法办弗州肇事者</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/8/14/n9528911.md#1">全美各地集会游行 悼念弗州遇难者</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/8/15/n9533113.md#1">弗州集会暴力冲突 川普：不应仅归责一方</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/21/n9978292.md#1" target="_blank">文革中自杀的几个名人（8）“御用文人”吴晗</a></li><li><a href="https://github.com/nmvalw282/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/11/n11583320.md#1" target="_blank">“法轮大法像尘世中的钻石 无比珍贵”</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/8/n11241790.md#1" target="_blank">共产暴政录：柬共屠杀300万民众及30万华人</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/9/14/n8301021.md#1" target="_blank">周向阳案辩词：为捍卫法律正义与真善忍而辩</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/nmvalw282/djy/blob/master/gb/20/5/30/n12149153.md#1">各国拒中共劣质口罩 大陆熔喷布价暴跌</a></li>
-<li><a href="https://github.com/nmvalw282/djy/blob/master/gb/20/5/30/n12147612.md#1">【世事关心】班农：暴政即将崩溃</a></li>
-<li><a href="https://github.com/nmvalw282/djy/blob/master/gb/20/5/31/n12149757.md#1">中印边境再冲突 中共军人遭拳打脚踢被带走</a></li>
-<li><a href="https://github.com/nmvalw282/djy/blob/master/gb/20/5/30/n12148572.md#1">oBike倒闭 6千余辆单车以每辆3元卖出</a></li>
-<li><a href="https://github.com/nmvalw282/djy/blob/master/gb/20/5/30/n12149034.md#1">借美明州事件挑衅 华春莹被网民集体打脸</a></li>
-<li><a href="https://github.com/nmvalw282/djy/blob/master/gb/20/5/29/n12146950.md#1">蔡英文造访台北铜锣湾书店 何韵诗发文致谢</a></li>
-<li><a href="https://github.com/nmvalw282/djy/blob/master/gb/20/5/29/n12147321.md#1">自曝伪造身份参加高考 陆男星仝卓遭节目封杀</a></li>
-<li><a href="https://github.com/nmvalw282/djy/blob/master/gb/20/5/29/n12147132.md#1">从赌王儿子到创业老板 何猷君更改微博认证</a></li>
-<li><a href="https://github.com/nmvalw282/djy/blob/master/gb/20/5/29/n12145455.md#1">张根硕IG直播退伍现场 久违露面好害羞</a></li>
-<li><a href="https://github.com/nmvalw282/djy/blob/master/gb/20/5/29/n12145805.md#1">BoA秀柔软筋骨 达成只有1%的人能做到的事</a></li>
-<li><a href="https://github.com/nmvalw282/djy/blob/master/gb/20/5/29/n12145861.md#1">自称不吃不喝几十年 印度9旬瑜珈师离世</a></li>
-<li><a href="https://github.com/nmvalw282/djy/blob/master/gb/20/5/29/n12146535.md#1">唐人凿井千尺不见水 却误闯地下的神仙世界</a></li>
-<li><a href="https://github.com/nmvalw282/djy/blob/master/gb/20/5/1/n12076592.md#1">那一场雪天围炉</a></li>
-<li><a href="https://github.com/nmvalw282/djy/blob/master/gb/20/4/14/n12029131.md#1">【命理】特需关注命中三凶星 七杀伤官阳刃</a></li>
-<li><a href="https://github.com/nmvalw282/djy/blob/master/gb/20/5/24/n12133331.md#1">轻慢佛法佛像 报应如影相随</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688852.md#1">【新闻大家谈】美国2疏忽 中共借机叫板三角联盟</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13691255.md#1">【拍案惊奇】传中共深改办易主 王沪宁丢两权</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/nmvalw282/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/nmvalw282/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/8/21/n9552214.htm">美弗州冲突中的极右、极左组织是何来历</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/8/21/n9552214.htm">美弗州冲突中的极右、极左组织是何来历</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/nmvalw282/djy/blob/master/gb/17/8/21/n9552214.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/nmvalw282/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmvalw282/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/nmvalw282/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/nmvalw282/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nmvalw282/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmvalw282/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nmvalw282/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmvalw282/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/nmvalw282/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmvalw282/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nmvalw282/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmvalw282/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nmvalw282/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmvalw282/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nmvalw282/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmvalw282/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/nmvalw282/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmvalw282/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/nmvalw282/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmvalw282/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nmvalw282/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmvalw282/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nmvalw282/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmvalw282/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/nmvalw282/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmvalw282/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nmvalw282/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmvalw282/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/nmvalw282/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmvalw282/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nmvalw282/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmvalw282/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nmvalw282/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmvalw282/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nmvalw282/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmvalw282/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nmvalw282/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmvalw282/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nmvalw282/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmvalw282/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nmvalw282/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmvalw282/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nmvalw282/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmvalw282/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nmvalw282/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmvalw282/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nmvalw282/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nmvalw282/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/17/8/21/n9552214.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
