--- a/gb/17/8/21/n9550645.md
+++ b/gb/17/8/21/n9550645.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dckync349/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dckync349/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/dckync349/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dckync349/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/dckync349/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dckync349/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/dckync349/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dckync349/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/dckync349/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dckync349/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/dckync349/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dckync349/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/dckync349/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dckync349/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/dckync349/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dckync349/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/dckync349/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/dckync349/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/dckync349/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/dckync349/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/dckync349/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/dckync349/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/dckync349/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/dckync349/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/dckync349/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/dckync349/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/dckync349/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/dckync349/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/dckync349/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/dckync349/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/dckync349/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/dckync349/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/dckync349/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/dckync349/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/dckync349/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/dckync349/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/dckync349/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/dckync349/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/dckync349/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/dckync349/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/dckync349/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/dckync349/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/dckync349/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/dckync349/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/dckync349/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/dckync349/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/dckync349/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>2017旧金山湾区房价 7月份销售一览</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2017/08/shutterstock_158989601-600x335.jpg" />
 <h6>旧金山湾区七月份房价。（Shutterstock）
@@ -8,13 +8,13 @@
 <hr>
 	<p>【大纪元2017年08月21日讯】以下表格即是2017年7月份，旧金山湾区的部分城市的房市销售一览。<br />
 注：房型CO是康斗，DE是独立房</p>
-<figure id="attachment_9551197" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2017/08/7.27.23.png"><img class="wp-image-9551197 size-medium" src="https://i.epochtimes.com/assets/uploads/2017/08/7.27.23-450x514.png" alt="2017七月份旧金山湾区房价：Cupertino、Sunnyvale。" width="450" b="514" /></a><figcaption class="wp-caption-text">2017七月份旧金山<ahref="https://github.com/dckync349/djy/blob/master/gb/tag/%E6%B9%BE%E5%8C%BA%E6%88%BF%E4%BB%B7.md#1">湾区房价</a>：Cupertino、Sunnyvale。</figcaption></figure>
-<figure id="attachment_9551202" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2017/08/7.27.42.png"><img class="size-medium wp-image-9551202" src="https://i.epochtimes.com/assets/uploads/2017/08/7.27.42-450x235.png" alt="2017七月份旧金山湾区房价：San Jose。" width="450" b="235" /></a><figcaption class="wp-caption-text">2017七月份旧金山<ahref="https://github.com/dckync349/djy/blob/master/gb/tag/%E6%B9%BE%E5%8C%BA%E6%88%BF%E4%BB%B7.md#1">湾区房价</a>：San Jose。</figcaption></figure>
-<figure id="attachment_9551207" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2017/08/7.27.55.png"><img class="size-medium wp-image-9551207" src="https://i.epochtimes.com/assets/uploads/2017/08/7.27.55-450x473.png" alt="2017七月份旧金山湾区房价：Palo Alto、Mountain View。" width="450" b="473" /></a><figcaption class="wp-caption-text">2017七月份<ahref="https://github.com/dckync349/djy/blob/master/gb/tag/%E6%97%A7%E9%87%91%E5%B1%B1%E6%B9%BE%E5%8C%BA%E6%88%BF%E4%BB%B7.md#1">旧金山湾区房价</a>：Palo Alto、Mountain View。</figcaption></figure>
-<figure id="attachment_9551209" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2017/08/7.28.08.png"><img class="size-medium wp-image-9551209" src="https://i.epochtimes.com/assets/uploads/2017/08/7.28.08-450x267.png" alt="2017七月份旧金山湾区房价：Menlo Park、Burlingame。" width="450" b="267" /></a><figcaption class="wp-caption-text">2017七月份<ahref="https://github.com/dckync349/djy/blob/master/gb/tag/%E6%97%A7%E9%87%91%E5%B1%B1%E6%B9%BE%E5%8C%BA%E6%88%BF%E4%BB%B7.md#1">旧金山湾区房价</a>：Menlo Park、Burlingame。</figcaption></figure>
-<figure id="attachment_9551221" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2017/08/7.28.31.png"><img class="size-medium wp-image-9551221" src="https://i.epochtimes.com/assets/uploads/2017/08/7.28.31-450x678.png" alt="2017七月份旧金山湾区房价：Hillsborough、San Francisco。" width="450" b="678" /></a><figcaption class="wp-caption-text">2017七月份旧金山湾区房价：Hillsborough、San Francisco。</figcaption></figure>
-<figure id="attachment_9551224" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2017/08/7.28.47.png"><img class="size-medium wp-image-9551224" src="https://i.epochtimes.com/assets/uploads/2017/08/7.28.47-450x662.png" alt="2017七月份旧金山湾区房价：Fremont、Pleasanton。" width="450" b="662" /></a><figcaption class="wp-caption-text">2017七月份旧金山湾区房价：Fremont、Pleasanton。</figcaption></figure>
-<figure id="attachment_9551227" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2017/08/7.29.02.png"><img class="size-medium wp-image-9551227" src="https://i.epochtimes.com/assets/uploads/2017/08/7.29.02-450x248.png" alt="2017七月份旧金山湾区房价：Milpitas、Newark。" width="450" b="248" /></a><figcaption class="wp-caption-text">2017七月份旧金山湾区房价：Milpitas、Newark。</figcaption></figure>
+<figure id="attachment_9551197" aria-describedby="caption-attachment-9551197" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2017/08/7.27.23.png"><img class="wp-image-9551197 size-medium" src="https://i.epochtimes.com/assets/uploads/2017/08/7.27.23-450x514.png" alt="2017七月份旧金山湾区房价：Cupertino、Sunnyvale。" width="450" b="514" /></a><figcaption id="caption-attachment-9551197" class="wp-caption-text">2017七月份旧金山<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B9%BE%E5%8C%BA%E6%88%BF%E4%BB%B7.md#1">湾区房价</a>：Cupertino、Sunnyvale。</figcaption></figure>
+<figure id="attachment_9551202" aria-describedby="caption-attachment-9551202" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2017/08/7.27.42.png"><img class="size-medium wp-image-9551202" src="https://i.epochtimes.com/assets/uploads/2017/08/7.27.42-450x235.png" alt="2017七月份旧金山湾区房价：San Jose。" width="450" b="235" /></a><figcaption id="caption-attachment-9551202" class="wp-caption-text">2017七月份旧金山<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B9%BE%E5%8C%BA%E6%88%BF%E4%BB%B7.md#1">湾区房价</a>：San Jose。</figcaption></figure>
+<figure id="attachment_9551207" aria-describedby="caption-attachment-9551207" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2017/08/7.27.55.png"><img class="size-medium wp-image-9551207" src="https://i.epochtimes.com/assets/uploads/2017/08/7.27.55-450x473.png" alt="2017七月份旧金山湾区房价：Palo Alto、Mountain View。" width="450" b="473" /></a><figcaption id="caption-attachment-9551207" class="wp-caption-text">2017七月份<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%97%A7%E9%87%91%E5%B1%B1%E6%B9%BE%E5%8C%BA%E6%88%BF%E4%BB%B7.md#1">旧金山湾区房价</a>：Palo Alto、Mountain View。</figcaption></figure>
+<figure id="attachment_9551209" aria-describedby="caption-attachment-9551209" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2017/08/7.28.08.png"><img class="size-medium wp-image-9551209" src="https://i.epochtimes.com/assets/uploads/2017/08/7.28.08-450x267.png" alt="2017七月份旧金山湾区房价：Menlo Park、Burlingame。" width="450" b="267" /></a><figcaption id="caption-attachment-9551209" class="wp-caption-text">2017七月份<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%97%A7%E9%87%91%E5%B1%B1%E6%B9%BE%E5%8C%BA%E6%88%BF%E4%BB%B7.md#1">旧金山湾区房价</a>：Menlo Park、Burlingame。</figcaption></figure>
+<figure id="attachment_9551221" aria-describedby="caption-attachment-9551221" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2017/08/7.28.31.png"><img class="size-medium wp-image-9551221" src="https://i.epochtimes.com/assets/uploads/2017/08/7.28.31-450x678.png" alt="2017七月份旧金山湾区房价：Hillsborough、San Francisco。" width="450" b="678" /></a><figcaption id="caption-attachment-9551221" class="wp-caption-text">2017七月份旧金山湾区房价：Hillsborough、San Francisco。</figcaption></figure>
+<figure id="attachment_9551224" aria-describedby="caption-attachment-9551224" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2017/08/7.28.47.png"><img class="size-medium wp-image-9551224" src="https://i.epochtimes.com/assets/uploads/2017/08/7.28.47-450x662.png" alt="2017七月份旧金山湾区房价：Fremont、Pleasanton。" width="450" b="662" /></a><figcaption id="caption-attachment-9551224" class="wp-caption-text">2017七月份旧金山湾区房价：Fremont、Pleasanton。</figcaption></figure>
+<figure id="attachment_9551227" aria-describedby="caption-attachment-9551227" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2017/08/7.29.02.png"><img class="size-medium wp-image-9551227" src="https://i.epochtimes.com/assets/uploads/2017/08/7.29.02-450x248.png" alt="2017七月份旧金山湾区房价：Milpitas、Newark。" width="450" b="248" /></a><figcaption id="caption-attachment-9551227" class="wp-caption-text">2017七月份旧金山湾区房价：Milpitas、Newark。</figcaption></figure>
 <p>资料来源：旧金山、南湾、东湾MLS<br />
 以上数据由星河地产（Starriver Realty）房地产经纪Jason（Zhenhua）Tao（BRE：01869132）提供</p>
 <p>Jason Tao熟悉旧金山、湾区房地产市场。联络Jason：（510）366-0071邮箱：jason.z.tao@gmail.com<br />
@@ -27,41 +27,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/dckync349/djy/blob/master/gb/17/2/24/n8846354.md#1">2017旧金山湾区房价 1月份销售一览</a></li>
-<li><a href="https://github.com/dckync349/djy/blob/master/gb/17/3/25/n8964382.md#1">2017旧金山湾区房价 2月份销售一览</a></li>
-<li><a href="https://github.com/dckync349/djy/blob/master/gb/17/4/29/n9087349.md#1">2017旧金山湾区房价 3月份销售一览</a></li>
-<li><a href="https://github.com/dckync349/djy/blob/master/gb/17/5/25/n9184466.md#1">今年首季旧金山房屋价量齐降  2011年来首次</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/2/24/n8846354.md#1">2017旧金山湾区房价 1月份销售一览</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/3/25/n8964382.md#1">2017旧金山湾区房价 2月份销售一览</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/4/29/n9087349.md#1">2017旧金山湾区房价 3月份销售一览</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/25/n9184466.md#1">今年首季旧金山房屋价量齐降  2011年来首次</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/26/n10248973.md#1" target="_blank">还原真实的中共：年轻人乌托邦梦碎</a></li><li><a href="https://github.com/dckync349/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/5/11/n2112872.md#1" target="_blank">法轮功受难中重建中华价值观</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/12/n11584537.md#1" target="_blank">颜智华：中国特大饥荒60周年祭（二）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/29/n11288413.md#1" target="_blank">超越人生苦难 女教授从80岁回到60岁</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/dckync349/djy/blob/master/gb/20/12/27/n12647393.md#1">中共培育基因改造士兵 或引圣经中末世战争</a></li>
-<li><a href="https://github.com/dckync349/djy/blob/master/gb/20/12/11/n12613857.md#1">死于缅甸战场的日本兵 托梦转生缅甸女</a></li>
-<li><a href="https://github.com/dckync349/djy/blob/master/gb/20/12/21/n12634571.md#1">《诸世纪》预言共产恶魔的产生与覆灭</a></li>
-<li><a href="https://github.com/dckync349/djy/blob/master/gb/9/12/15/n2754404.md#1">绘画中最美的圣母子形像</a></li>
-<li><a href="https://github.com/dckync349/djy/blob/master/gb/20/12/12/n12614962.md#1">【命理】尽人事感天心 五度落榜生变状元</a></li>
-<li><a href="https://github.com/dckync349/djy/blob/master/gb/20/12/28/n12650320.md#1">【重播】乔州数十名目击者揭大选舞弊</a></li>
-<li><a href="https://github.com/dckync349/djy/blob/master/gb/20/12/30/n12654854.md#1">【微视频】2020“狼人杀”卡牌游戏道天机？</a></li>
-<li><a href="https://github.com/dckync349/djy/blob/master/gb/20/12/30/n12654960.md#1">【直播】乔州参院选举听证会 朱利安尼讲话</a></li>
-<li><a href="https://github.com/dckync349/djy/blob/master/gb/20/12/27/n12648017.md#1">美政党副主席：唯用军事法庭 川普方可救国</a></li>
-<li><a href="https://github.com/dckync349/djy/blob/master/gb/20/12/28/n12649661.md#1">【新闻大家谈】川普连夜签法案 奇特程序引议</a></li>
-<li><a href="https://github.com/dckync349/djy/blob/master/gb/20/12/28/n12649983.md#1">【财商天下】阿里巴巴被调查 一夜蒸发近万亿</a></li>
-<li><a href="https://github.com/dckync349/djy/blob/master/gb/20/12/28/n12650498.md#1">牵连范丞丞杂志遭下架 范冰冰尝试复出再碰壁</a></li>
-<li><a href="https://github.com/dckync349/djy/blob/master/gb/20/12/27/n12647886.md#1">因星爷《长江七号》爆红 徐娇称造成童年阴影</a></li>
-<li><a href="https://github.com/dckync349/djy/blob/master/gb/20/12/28/n12648660.md#1">2020全球百大美女榜 Lisa夺亚军 子瑜获第四名</a></li>
-<li><a href="https://github.com/dckync349/djy/blob/master/gb/20/12/27/n12648003.md#1">傅雷之子 86岁钢琴家傅聪在英国染疫住院</a></li>
-<li><a href="https://github.com/dckync349/djy/blob/master/gb/20/12/28/n12650270.md#1">杨幂自曝拒录一档走红综艺节目原因</a></li>
-<li><a href="https://github.com/dckync349/djy/blob/master/gb/20/12/28/n12649226.md#1">在相同公司待84年 世界最忠诚员工过世</a></li>
-<li><a href="https://github.com/dckync349/djy/blob/master/gb/20/12/28/n12648795.md#1">2020年很糟？ 看诺查丹玛斯如何预言2021年</a></li>
-<li><a href="https://github.com/dckync349/djy/blob/master/gb/20/12/29/n12651442.md#1">天鹅哀悼同伴死亡 导致德国23列火车误点</a></li>
-<li><a href="https://github.com/dckync349/djy/blob/master/gb/16/8/16/n8205756.md#1">脸黄、老得快是血虚？女人血虚有6大原因</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688852.md#1">【新闻大家谈】美国2疏忽 中共借机叫板三角联盟</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13691255.md#1">【拍案惊奇】传中共深改办易主 王沪宁丢两权</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/dckync349/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/dckync349/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/8/21/n9550645.htm">2017旧金山湾区房价 7月份销售一览</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/8/21/n9550645.htm">2017旧金山湾区房价 7月份销售一览</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/dckync349/djy/blob/master/gb/17/8/21/n9550645.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/dckync349/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dckync349/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/dckync349/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/dckync349/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/dckync349/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dckync349/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/dckync349/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dckync349/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/dckync349/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dckync349/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/dckync349/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dckync349/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/dckync349/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dckync349/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/dckync349/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dckync349/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/dckync349/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dckync349/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/dckync349/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dckync349/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/dckync349/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dckync349/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/dckync349/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dckync349/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/dckync349/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dckync349/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/dckync349/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dckync349/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/dckync349/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dckync349/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/dckync349/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dckync349/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/dckync349/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dckync349/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/dckync349/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dckync349/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/dckync349/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dckync349/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/dckync349/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dckync349/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/dckync349/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dckync349/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/dckync349/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dckync349/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/dckync349/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dckync349/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/dckync349/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dckync349/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/17/8/21/n9550645.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
